kube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esign-frontend
  labels:
    app: esign
    part: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: esign
      part: frontend
  template:
    metadata:
      annotations:
         cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: esign
        part: frontend
    spec:
      volumes:
        - name: conf
          configMap:
            name: esign-conf
        - name: files
          persistentVolumeClaim:
            claimName: esign-files
      containers:
        - name: frontend
          image: as207960/as207960-esign:22
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: "/as207960-esign/files"
              name: files
            - mountPath: "/as207960-esign/Rocket.toml"
              name: conf
              subPath: "Rocket.toml"
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esign-tasks
  labels:
    app: esign
    part: tasks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: esign
      part: tasks
  template:
    metadata:
      annotations:
         cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: esign
        part: tasks
    spec:
      volumes:
        - name: conf
          configMap:
            name: esign-conf
        - name: certs
          configMap:
            name: esign-certs
        - name: files
          persistentVolumeClaim:
            claimName: esign-files
      containers:
        - name: tasks
          image: as207960/as207960-esign:22
          imagePullPolicy: IfNotPresent
          command: ["/as207960-esign/tasks"]
          resources:
            limits:
              hsm.as207960.net/esigner: 1
          volumeMounts:
            - mountPath: "/as207960-esign/files"
              name: files
            - mountPath: "/as207960-esign/Rocket.toml"
              name: conf
              subPath: "Rocket.toml"
            - mountPath: "/certs"
              name: certs
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: esign-frontend
spec:
  podSelector:
    matchLabels:
      app: esign
      part: frontend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
    ports:
    - protocol: TCP
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: esign-frontend
  labels:
    app: esign
    part: frontend
spec:
  selector:
    app: esign
    part: frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esign
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - esign.as207960.net
      secretName: esign-tls
  rules:
  - host: esign.as207960.net
    http: &http
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: esign-frontend
            port:
              number: 80
